kube-packages/linkerd-viz/dashboard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  name: linkerd-dashboard
  namespace: linkerd-viz
spec:
  ingressClassName: nginx
  rules:
  - host: linkerd.playcek8s2.playcekube.local
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 8084
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - linkerd.playcek8s.playcekube.local
    secretName: linkerd-tls
